--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,13 @@
   height: 140px; 
   object-fit: cover;
 }
+
+.page-container{
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+}
+
+footer{
+  margin-top: auto;
+}
